--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,7 @@
     <script src="https://unpkg.com/htmx.org@1.9.12"></script>
   </head>
   <body>
-    <h1>Home</h1>
-    <p>Welcome to the home page!</p>
+    <h1>Connect4</h1>
     {{template "new-game" .}}
   </body>
 </html>
