--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,9 @@
 <html>
   <head>
     <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="public/app.css">
     <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <!-- htmx -->
     <script src="https://unpkg.com/htmx.org@1.9.12"></script>
   </head>
